Wrap all code in HTML in <code>, not just <pre>
This was recommended in Rainbow v1.*, but with v2.* it seems to have
become mandatory: Rainbow appends preloader <div>s to the <pre>, and if
there’s no inner <code> that distinguishes the actual code from those
<div>s, then they get treated like regular code and syntax highlighted.

--- a/typechecker/build.xml
+++ b/typechecker/build.xml
@@ -227,13 +227,25 @@
         <replace dir="${build.dir}/${lang}/html/">
             <include name="**/*.html"/>
           <replacetoken><![CDATA[<pre class="programlisting">]]></replacetoken>
-          <replacevalue><![CDATA[<pre data-language="ceylon">]]></replacevalue>
+          <replacevalue><![CDATA[<pre><code data-language="ceylon">]]></replacevalue>
         </replace>
         
         <replace dir="${build.dir}/${lang}/html/">
             <include name="**/*.html"/>
           <replacetoken><![CDATA[<pre class="synopsis">]]></replacetoken>
-          <replacevalue><![CDATA[<pre data-language="bnf">]]></replacevalue>
+          <replacevalue><![CDATA[<pre><code data-language="bnf">]]></replacevalue>
+        </replace>
+        
+        <replace dir="${build.dir}/${lang}/html/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[<pre class="screen">]]></replacetoken>
+          <replacevalue><![CDATA[<pre class="screen"><code>]]></replacevalue>
+        </replace>
+                
+        <replace dir="${build.dir}/${lang}/html/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[</pre>]]></replacetoken>
+          <replacevalue><![CDATA[</code></pre>]]></replacevalue>
         </replace>
         
         <replace dir="${build.dir}/${lang}/html/">
@@ -269,18 +281,30 @@
   <script src='../shared/css/bnf.js' type='text/javascript'></script>]]></replacevalue>
           </replace>
           
-          <replace dir="${build.dir}/${lang}/html_single/">
-              <include name="**/*.html"/>
-            <replacetoken><![CDATA[<pre class="programlisting">]]></replacetoken>
-            <replacevalue><![CDATA[<pre data-language="ceylon">]]></replacevalue>
-          </replace>
-          
-          <replace dir="${build.dir}/${lang}/html_single/">
-              <include name="**/*.html"/>
-            <replacetoken><![CDATA[<pre class="synopsis">]]></replacetoken>
-            <replacevalue><![CDATA[<pre data-language="bnf">]]></replacevalue>
-          </replace>
-          
+        <replace dir="${build.dir}/${lang}/html_single/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[<pre class="programlisting">]]></replacetoken>
+          <replacevalue><![CDATA[<pre><code data-language="ceylon">]]></replacevalue>
+        </replace>
+        
+        <replace dir="${build.dir}/${lang}/html_single/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[<pre class="synopsis">]]></replacetoken>
+          <replacevalue><![CDATA[<pre><code data-language="bnf">]]></replacevalue>
+        </replace>
+        
+        <replace dir="${build.dir}/${lang}/html_single/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[<pre class="screen">]]></replacetoken>
+          <replacevalue><![CDATA[<pre class="screen"><code>]]></replacevalue>
+        </replace>
+                
+        <replace dir="${build.dir}/${lang}/html_single/">
+            <include name="**/*.html"/>
+          <replacetoken><![CDATA[</pre>]]></replacetoken>
+          <replacevalue><![CDATA[</code></pre>]]></replacevalue>
+        </replace>
+        
     </target>
 
     <target name="lang.htmlmisc">
