No tests for tools, breaks other ant versions

--- a/tools/build.xml
+++ b/tools/build.xml
@@ -224,6 +224,7 @@
     </target>
 
     <target name="compile.tests">
+    	<!-- No tests to compile
         <mkdir dir="${build.classes}" />
         <javac
             srcdir="${test.src}"
@@ -241,6 +242,7 @@
                 <exclude name="**/*.java" />
             </fileset>
         </copy>
+        -->
     </target>
 
     <target name="test"
