--- a/compiler-js/build.xml
+++ b/compiler-js/build.xml
@@ -122,7 +122,10 @@
             <param name="file" value="${runtime}/${jslangmodel}" />
         </antcall>
     </target>
-
+    
+	<target name="publish-jar" depends="ceylon.js.jar,publish-internal"
+		  description="Publish Ceylon JS compiler jar (no language module) to default repo"/>
+	
     <target name="build" depends="ceylon.js.jar,build-js-language-module">
         <mkdir dir="${build.bin}" />
         <copy todir="${build.bin}">
