Fix #7424 (CeylonDoc doesn't work properly on JS-only modules)
Signed-off-by: David Festal <dfestal@redhat.com>

--- a/compiler-java/.gitignore
+++ b/compiler-java/.gitignore
@@ -17,3 +17,4 @@ test/trace/org/eclipse/ceylon/compiler/java/test/trace/**/*.class
 test/trace/org/eclipse/ceylon/compiler/java/test/trace/*.class
 .ceylon/config.old
 hs_err_pid*
+node_modules/
