Eclipse enforces module visibility on java 9 so have to update build paths #7263

--- a/cmr/.classpath
+++ b/cmr/.classpath
@@ -17,8 +17,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-model"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-langtools-classfile"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-module-resolver-aether"/>
-	<classpathentry kind="src" path="/ceylon-module-resolver-javascript"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-module-resolver-webdav"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ceylon-module-resolver-aether"/>
+	<classpathentry exported="true" kind="src" path="/ceylon-module-resolver-javascript"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ceylon-module-resolver-webdav"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
