--- a/cmr-js/.classpath
+++ b/cmr-js/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/net/minidev/json-smart/1.3.1/net.minidev.json-smart-1.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/ceylon-runtime/dist/repo/net/minidev/json-smart/1.3.1/net.minidev.json-smart-1.3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
