--- a/cmr-webdav/.classpath
+++ b/cmr-webdav/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/org/eclipse/ceylon/aether/3.3.9/org.eclipse.ceylon.aether-3.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="/ceylon-runtime/dist/repo/org/eclipse/ceylon/aether/3.3.9/org.eclipse.ceylon.aether-3.3.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
