--- a/compiler-java/.classpath
+++ b/compiler-java/.classpath
@@ -17,11 +17,11 @@
 	<classpathentry kind="lib" path="/ceylon/lib/antlr-complete-3.5.2.jar"/>
 	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/org/tautua/markdownpapers/core/1.3.4/org.tautua.markdownpapers.core-1.3.4.jar"/>
 	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/com/github/rjeschke/txtmark/0.13/com.github.rjeschke.txtmark-0.13.jar"/>
-	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/org/jboss/modules/1.4.4.Final/org.jboss.modules-1.4.4.Final.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-langtools-classfile"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-cli"/>
 	<classpathentry kind="lib" path="/ceylon.language/ide-dist/ceylon.language-1.3.4-SNAPSHOT.car" sourcepath="/ceylon.language"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-tools"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ceylon-bootstrap"/>
+	<classpathentry kind="lib" path="/ceylon-runtime/dist/repo/org/jboss/modules/1.8.6.Final/org.jboss.modules-1.8.6.Final.jar" sourcepath="/ceylon/debug/jboss-modules-1.4.4.Final-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
