--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     name: Java ${{ matrix.java }}/${{ matrix.os}}
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 60
     strategy:
       matrix:
         os: [ubuntu-latest]
