--- a/lib/build.properties
+++ b/lib/build.properties
@@ -1,4 +1,10 @@
 
+# -----  ant.jar
+antjar.version=1.8.2
+antjar.jar=ant-${antjar.version}.jar
+antjar.url=
+antjar.lib=${base.path}/${antjar.jar}
+
 # -----  ANother Tool for Language Recognition version 3.4 or later ---
 antlr.version=3.5.2
 antlr.jar=antlr-complete-${antlr.version}.jar
